# RhythmX_POC

./: .gitignore  Working DrChrono API.postman_collection.json  package-lock.json
medisync/backend/: .dockerignore  Dockerfile  appointment_registry.json  document_registry.json  pyproject.toml  requirements.txt  test_config.py
medisync/backend/app/: main.py
medisync/backend/app/core/: config.py  logger.py
medisync/backend/app/fhir_pipeline/: __init__.py  allergy_mapper.py  base_mapper.py  condition_mapper.py  encounter_mapper.py  immunization_mapper.py  medication_mapper.py  observation_mapper.py  patient_mapper.py  post_processor.py  push_orchestrator.py  router.py  validator.py
medisync/backend/app/fhir_r5/: __init__.py  bundle_handler.py  client.py  config.py  router.py
medisync/backend/app/mappers/: __init__.py  allergy_mapper.py  appointment_mapper.py  authorize.py  base_mapper.py  care_plan_mapper.py  care_team_mapper.py  centralized_mapper.py  mappers.json  (+18 more)
medisync/backend/tests/: test_allergy_mapping_status.py  test_allergy_push_mapping.py  test_appointment_push_mapping.py  test_clinical_note_push_mapping.py  test_clinical_notes.py  test_csv_column_mapping.py  test_diagnostic_report_push_mapping.py  test_documents.py  test_drchrono.py  test_fhir_r5_client.py  test_fhir_r5_resources.py  test_logging_service.py  test_mappers.py  test_medication_push_mapping.py  test_observation_merge_showcase.py  test_observation_push_mapping.py  test_patient_push_mapping.py  test_problem_push_mapping.py  test_text_defaults.py  test_upload_dedup.py  test_validators.py
(+126 files in other folders)
